# scdiv

./: .gitignore  LICENSE  README.md  pyproject.toml
.hypothesis/constants/: 398c3979c832dcf3  c6d46bcfecc99fba  e4fea7ab58d703ef
.hypothesis/examples/04e6b3400353b141/: 40b6854277e5de5f  ed5ba6614dc9caee  f85cffb7edbed063
.hypothesis/examples/40b6854277e5de5f/: ba90a0c339ebea58
.hypothesis/examples/ed5ba6614dc9caee/: 03aa8ab246f795f4  04af681d6e9154a8  05f01bbb3ca94dda  06d7f4191397e17b  06faaef289614372  102400e3cc0f54be  1114b53b8e61640d  13d3a95dab2cb4b8  19ac9738d6426016  1d3fddfa0c90f560  1dc933f0232dba04  20de164b93f61184  21263556f06360e5  2366cd34932a2a1f  25fe50321729e507  363097cc1c2660b4  390fc9aa2c250279  39ae52390ddc1e8a  3a302d43afc44c38  3cd16e056e85e8d2  3d6a67fc57728cdc  40f50bba6992f64c  420906699e100888  42ccd4f1a65bbfb8  43e9c7cb39e27957  441b8cc83f5d9ec7  477b869dded69476  48262353ed364676  491b722c1a293a44  4caea3bec5fb47f8  4edf4d47e26fd9cc  4f4e5c3110a0348a  518f5b28f6a49c72  51beb35b5455e366  52e15e37641431fd  56c9e650b86376b2  5965037a473effa6  59d81f95f90a8810  5e9ad0ba457e9254  5f0dd4d9cd33f7ed  (+71 more)
.hypothesis/examples/f85cffb7edbed063/: ce37c4fd1ae034ca  d07015c0e9bf6328  f1d18a8bc5c38dc9
src/scdiv/: __init__.py  _similarity.py  diversity.py  pl.py  similarity.py  tl.py
src/scdiv/tl/: __init__.py  _diversity.py
tests/: test_diversity.py  test_pl.py  test_similarity.py  test_tl.py
