[project]
name = "scdiv"
version = "0.1.0"
description = "A cell-type-agnostic tissue diversity measure for transcriptomics."
readme = "README.md"
authors = [
    { name = "Katherine Benjamin", email = "kate@katherinebenjamin.co.uk" }
]
requires-python = ">=3.10.0"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.scripts]
scdiv = "scdiv:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "ipykernel>=7.2.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "seaborn>=0.13.2",
]

[tool.ruff.lint]
select = ['ALL']
ignore = ['COM812']

[tool.ruff.lint.per-file-ignores]
"tests/**" = ['ANN', 'D', 'S101']
