[project]
name = "scdiv"
version = "0.2.0"
description = "A cell-type-agnostic tissue diversity measure for transcriptomics."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Katherine Benjamin", email = "kate@katherinebenjamin.co.uk" }
]
requires-python = ">=3.10.0"
dependencies = [
    "anndata>=0.10.0",
    "matplotlib>=3.9",
    "numpy>=2.2.6",
    "scanpy>=1.11.5",
    "scipy>=1.15.3",
    "seaborn>=0.13",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "ipykernel>=7.2.0",
    "marimo[recommended]>=0.21.1",
    "pandas>=2.3.3",
    "pooch>=1.9.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "seaborn>=0.13.2",
]

[tool.ruff.lint]
select = ['ALL']
ignore = ['COM812']

[tool.ruff.lint.per-file-ignores]
"tests/**" = ['ANN', 'D', 'S101']
